# qproxy

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.json  config_forward.json  config_playback.json  config_record.json  coverage.sh
.github/workflows/: build.yml
proto/: route.proto
qproxy-macros/: Cargo.toml
qproxy-macros/src/: lib.rs
scripts/: cross-compile.sh
src/: errors.rs  lib.rs  logger.rs  main.rs  model.rs  options.rs  playback.rs  record.rs
src/api/: health.rs  metrics.rs  mod.rs  offset_commit.rs  playback.rs  record.rs  sync.rs
src/client/: grpc_client.rs
src/filter/: mod.rs  response_filter.rs
src/monitor/: collector.rs  mod.rs
src/mqtt-client/: client.rs  message.rs
src/mqtt_client/: client.rs  codec.rs  crypto.rs  message.rs  mod.rs
src/proxy/: grpc.rs  http.rs  mod.rs  tcp.rs  tcp_protobuf_server.rs
src/proxy/filter/: mod.rs  response.rs
src/service_discovery/: kubernetes_provider.rs  mod.rs  static_provider.rs  zookeeper_provider.rs
src/sync/: mod.rs
src/tests/: playback_test.rs  proxy_test.rs  record_test.rs
tests/: monitor_tests.rs  mqtt_integration_test.rs  mqtt_test.rs  playback_test.rs  proxy_test.rs  record_test.rs  sync_test.rs
