[package]
name = "qproxy"
version = "0.1.0"
edition = "2021"
description = "一个支持流量录制和回放的代理服务器，可用于跨可用区部署"
authors = ["huangpg"]
license = "MIT"
keywords = ["proxy", "record", "playback", "http", "tcp"]
categories = ["network-programming", "web-programming"]
default-run = "qproxy"

[[bin]]
name = "qproxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"
futures-util = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
rustls = "0.23"
tokio-rustls = "0.26"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
url = "2.5"
rand = "0.9"
chrono = "0.4"
redis = { version = "0.30", features = ["tokio-comp", "connection-manager"] }
zookeeper = "0.8"
zookeeper-async = "5.0"
k8s-openapi = { version = "0.24", features = ["v1_28"] }
kube = { version = "^0.99", features = ["client"] }
secrecy = "0.10"
[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }


[[test]]
name = "playback_test"
path = "tests/playback_test.rs"

[[test]]
name = "record_test"
path = "tests/record_test.rs"

[[test]]
name = "proxy_test"
path = "tests/proxy_test.rs"
