[package]
name = "qproxy"
version = "0.1.0"
edition = "2021"
description = "一个支持流量录制和回放的代理服务器，可用于跨可用区部署"
authors = ["huangpg"]
license = "MIT"
keywords = ["proxy", "record", "playback", "http", "tcp"]
categories = ["network-programming", "web-programming"]
default-run = "qproxy"

[workspace]
members = ["qproxy-macros"]

[lib]
name = "qproxy"
path = "src/lib.rs"

[[bin]]
name = "qproxy"
path = "src/main.rs"

[dependencies]
qproxy-macros = { path = "./qproxy-macros" }

tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1.5"
futures-util = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.23"
tokio-rustls = "0.26"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
url = "2.5"
chrono = "0.4"
redis = { version = "0.31", features = ["tokio-comp", "connection-manager"] }
zookeeper = "0.8"
zookeeper-async = "5.0"
k8s-openapi = { version = "0.24", features = ["v1_28"] }
kube = { version = "^0.99", features = ["client"] }
secrecy = "0.10"
lazy_static = "1.4"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures = "0.3.31"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
aes = "0.8"
aes-gcm = "0.10.1"
# crypto
base64="0.22"
hex = "0.4"
md5 = "0.7.0"
sha1 = "0.10.0"
block-modes = "0.9"
rand = "0.9"
uuid = { version = "1.7", features = ["v4"] }

# 用于获取系统信息
sysinfo = "0.35"
prometheus = "0.13"
# 用于在scope结束时执行清理
scopeguard = "1.2"
# 缓存
moka = { version = "0.12", features = ["sync"] }
# ketama hash一致性
pingora-ketama = "0.5.0"
# murmurhash
byteorder = "1.4"
# 支持akka
bincode = "1.3"

#  用于自定义派生宏
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# gRPC dependencies
tonic = { version = "0.9.2", features = ["tls"] }
prost = "0.11.9"

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
axum = "0.6"
tower = "0.4"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[[test]]
name = "playback_test"
path = "tests/playback_test.rs"

[[test]]
name = "mqtt_test"
path = "tests/mqtt_test.rs"

[[test]]
name = "mqtt_integration_test"
path = "tests/mqtt_integration_test.rs"

[[test]]
name = "sync_test"
path = "tests/sync_test.rs"

[[test]]
name = "monitor_tests"
path = "tests/monitor_tests.rs"